# Courselens

./: .env.example  .gitignore  .mcp.json  APP.md  ARCHITECTURE.md  CLAUDE.md  Makefile  PLAN.md  README.md  pyproject.toml  skills-lock.json
.claude/: memory.db  settings.json
.claude-flow/: CAPABILITIES.md  config.yaml  daemon-state.json
.claude-flow/metrics/: codebase-map.json  consolidation.json  learning.json  swarm-activity.json  v3-progress.json
.claude-flow/security/: audit-status.json
.claude-flow/swarm/: swarm-state.json
.claude/commands/: audit-all.md  audit.md  summarize-findings.md
.claude/skills/: canvas-accessibility-auditor  canvas-bulk-grading  canvas-course-builder  canvas-course-qc  canvas-discussion-facilitator  canvas-morning-check  canvas-peer-review-manager  canvas-week-plan  design-guide  doc-maintenance  morning-check  week-plan
.github/workflows/: ci.yml
.swarm/: memory.db  schema.sql  state.json
audit_mcp/: audit_mcp.py
backend/: claude_runner.py  config.py  db.py  main.py
backend/models/: __init__.py  applied_change.py  assignment_note.py  audit.py  finding.py  graph.py  node.py  suggestion.py
backend/routers/: __init__.py  assignment_notes.py  audit.py  changelog.py  findings.py  graph.py  ingest.py  internal.py  nodes.py  suggestions.py
backend/services/: assignment_note_service.py  audit_engine.py  changelog_service.py  file_service.py  finding_service.py  graph_service.py  html_links.py  (+2 more)
frontend/: package-lock.json  package.json
scripts/: ingest_canvas.py  seed_demo.py  setup.sh  setup_db.py
tests/: conftest.py
(+34 files in other folders)
